# cz-keep-a-changelog-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
cz_keep_a_changelog_plugin/: __init__.py  cz_keep_a_changelog_plugin.py  utils.py  version.py
cz_keep_a_changelog_plugin/templates/: CHANGELOG.md.j2  CHANGELOG_HEADER.md.j2
docs/: make.py  robots.txt
docs/pdoc_template/: frame.html.jinja2
test/: __init__.py  conftest.py  cz_keep_a_changelog_plugin_test.py  smoke_test.py  test_cz_keep_a_changelog_plugin.py
